<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_film"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:background="@drawable/frame_image">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoster"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="95dp"
            app:cardCornerRadius="9dp"
            android:layout_height="140dp">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="95dp"
                android:layout_height="140dp"
                android:contentDescription="@string/image_poster">
            </ImageView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/txt_color"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@+id/cvPoster"
            android:text="@string/title_film">

        </TextView>

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/tv_title"
            android:layout_marginStart="16dp"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/cvPoster"
            android:text="@string/genre"
            android:textColor="@color/txt_color">

        </TextView>

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/layout_RT"
            android:layout_below="@id/tv_genre"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/cvPoster"
            android:textSize="12sp"
            android:maxLines="3"
            android:text="@string/storyline"
            android:textColor="@color/genre_color">

        </TextView>

        <LinearLayout
            android:id="@+id/layout_RT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/cvPoster"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/image_rating"
                android:src="@drawable/ic_star">
            </ImageView>

            <TextView
                android:id="@+id/tv_rating"
                android:layout_marginStart="8dp"
                android:text="@string/rating"
                android:textColor="@color/txt_color"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <ImageView
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/image_time"
                android:src="@drawable/ic_av_timerdp">
            </ImageView>

            <TextView
                android:id="@+id/tv_time"
                android:layout_marginStart="8dp"
                android:text="@string/time"
                android:textColor="@color/txt_color"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>